# MustafaCLI

./: .env.example  .gitignore  .plugins.json  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  QUICK_WINS.md  RAG_GUIDE.md  README.md  README_PRODUCTION.md  TOOL_USAGE_IMPROVEMENTS.md  WEBUI_QUICKSTART.md  WEB_UI_GUIDE.md  debug_tool_calling.py  demo.bat  demo_cubesat.py  package.json  pyproject.toml  quick_start.bat  requirements-dev.txt  requirements-sat-maestro.txt  requirements.txt  run_agent.bat  setup_rag.py  test_cache.py  test_edit_capability.py  test_full_agent.py  test_loop_detection.py
.claude/: settings.local.json
.github/workflows/: ci.yml
ahmet mehmet/: sifre.txt
deployment/: Dockerfile  docker-compose.sat-maestro.yml  docker-compose.yml  install.sh  production.env  prometheus.yml
deployment/systemd/: mustafacli.service
docs/superpowers/plans/: 2026-03-10-full-upgrade.md  2026-03-10-sat-maestro-plan.md  2026-03-11-sat-maestro-mechanical.md
docs/superpowers/specs/: 2026-03-10-sat-maestro-design.md  2026-03-11-sat-maestro-mechanical-design.md
examples/: comparison_demo.py  demo.py
frontend/: angular.json  package.json
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.component.ts
frontend/src/app/components/chat/: chat.component.css  chat.component.html  chat.component.ts
frontend/src/app/components/error-toast/: error-toast.component.ts
frontend/src/app/components/file-tree/: file-tree.component.ts
frontend/src/app/core/auth/: auth.guard.ts  auth.interceptor.ts  auth.service.spec.ts  auth.service.ts
frontend/src/app/core/i18n/: i18n.pipe.ts  i18n.service.ts
frontend/src/app/models/: models.ts
frontend/src/app/services/: api.service.ts  websocket.service.spec.ts  websocket.service.ts
frontend/src/assets/i18n/: en.json  tr.json
src/: __init__.py  cli.py
src/api/: __init__.py  main.py  models.py  sessions.py
src/auth/: __init__.py  dependencies.py  jwt_handler.py  password.py  routes.py
src/core/: __init__.py  advanced.py  agent.py  config.py  constants.py  context.py  context_cache.py  enhanced_agent.py  exceptions.py  health.py  logging_config.py  memory.py  metrics.py  parallel.py  platform.py  providers.py  rate_limit.py  session.py  skills.py  tools.py
src/db/: __init__.py  database.py  models.py
src/i18n/: __init__.py  translator.py
src/i18n/locales/: en.json  tr.json
src/plugins/: __init__.py  base.py  catalog.py  hooks.py  loader.py  manager.py  registry.py
src/plugins/arch_analyzer/: __init__.py  config.py  plugin.py  report.py
src/plugins/arch_analyzer/analyzers/: __init__.py  api_mapper.py  dependencies.py  metrics.py  patterns.py  structure.py
src/plugins/mcp/: __init__.py  client.py  protocol.py  server.py
src/plugins/sat_maestro/: __init__.py  auto_analysis.py  bus_generator.py  config.py  cubesat_wizard.py  fem_pipeline.py  plugin.py  run_wizard.py
src/plugins/sat_maestro/core/: __init__.py  graph_models.py  graph_ops.py  mcp_bridge.py  neo4j_client.py  report.py
src/plugins/sat_maestro/cross_discipline/: __init__.py  agent.py  electrical_thermal.py  harness_routing.py  mass_thermal.py  mounting_check.py
src/plugins/sat_maestro/db/: seed_rules.py
src/plugins/sat_maestro/docs/: __init__.py  project_generator.py
src/plugins/sat_maestro/electrical/: __init__.py  agent.py  link_budget.py  pcb_generator.py  power_profile.py  schematic_generator.py
src/plugins/sat_maestro/electrical/analyzers/: __init__.py  connector.py  pin_to_pin.py  power_budget.py
src/plugins/sat_maestro/electrical/parsers/: __init__.py  gerber.py  kicad.py  pdf_vision.py
src/plugins/sat_maestro/electrical/rules/: __init__.py  loader.py
src/plugins/sat_maestro/mcp_servers/: __init__.py
src/plugins/sat_maestro/mcp_servers/calculix/: __init__.py  __main__.py  result_parser.py  server.py  solver.py
src/plugins/sat_maestro/mcp_servers/gmsh/: __init__.py  __main__.py  mesher.py  server.py
src/plugins/sat_maestro/mechanical/: __init__.py  agent.py
src/plugins/sat_maestro/mechanical/mechanism/: deployment.py  kinematic.py
src/plugins/sat_maestro/mechanical/structural/: __init__.py  assembly_validator.py  calculix_writer.py  cog_calculator.py  fem_report.py  freecad_model.py  geometry_builder.py  mass_budget.py  materials.py
src/plugins/sat_maestro/software/: __init__.py  firmware_generator.py
src/plugins/sat_maestro/templates/: report.html
src/rag/: __init__.py  chunker.py  embeddings.py  indexer.py  integration.py  retriever.py
tests/: conftest.py  test_api_v1.py  test_auth.py  test_context.py  test_db.py  test_i18n.py  test_mcp.py  test_memory.py  test_parallel.py  test_platform.py  test_plugins.py  test_rate_limit.py  test_tools.py  test_websocket.py
tests/e2e/: conftest.py  test_auth_flow.py  test_full_flow.py
tests/fixtures/: cubesat_eps.gbr  cubesat_eps.kicad_sch  test_electrical_e2e.py
tests/plugins/arch_analyzer/: __init__.py  conftest.py  test_api_mapper.py  test_dependencies.py  test_metrics.py  test_patterns.py  test_plugin.py  test_report.py  test_structure.py
tests/plugins/sat_maestro/: conftest.py  test_plugin.py  test_project_generator.py
tests/plugins/sat_maestro/core/: test_gerber_import.py  test_graph_models.py  test_graph_ops.py  test_mcp_bridge.py  test_neo4j_client.py  test_report.py
tests/plugins/sat_maestro/cross_discipline/: test_electrical_thermal.py  test_harness_routing.py  test_mass_thermal.py  test_mounting_check.py
tests/plugins/sat_maestro/electrical/: test_gerber_parser.py  test_kicad_parser.py  test_pdf_vision.py  test_pin_to_pin.py  test_power_budget.py  test_rule_engine.py  test_schematic_generator.py
tests/plugins/sat_maestro/mcp_servers/: test_calculix_parser.py  test_gmsh_mesher.py
tests/plugins/sat_maestro/mechanical/: test_assembly_validator.py  test_cog_calculator.py  test_deployment.py  test_kinematic.py  test_mass_budget.py  test_mechanical_agent.py  test_modal.py  test_orbital_cycle.py  test_random_vib.py  test_shock.py  test_thermal_checker.py  test_thermal_solver.py
(+11 files in other folders)
