[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-agent-cli"
version = "0.1.0"
description = "Claude Code architecture implementation for open source models"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Mustafa", email = "mustafa@kardelenyazilim.com" }
]
keywords = [
    "ai",
    "agent",
    "llm",
    "cli",
    "coding-assistant",
    "ollama",
    "qwen",
    "deepseek",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "httpx~=0.27.0",
    "rich~=13.7.1",
    "structlog~=24.1.0",
    "pydantic~=2.6.0",
    "pydantic-settings~=2.1.0",
    "tenacity~=8.2.3",
    "prometheus-client~=0.19.0",
    "psutil~=5.9.8",
    "asyncpg~=0.29.0",
    "sqlalchemy[asyncio]~=2.0.25",
    "alembic~=1.13.1",
    "python-jose[cryptography]~=3.3.0",
    "passlib[bcrypt]~=1.7.4",
    "stevedore~=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0.0",
    "pytest-asyncio~=0.23.0",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.12.0",
    "pytest-timeout~=2.2.0",
    "black~=24.2.0",
    "ruff~=0.2.0",
    "mypy~=1.8.0",
    "safety~=3.0.0",
    "bandit~=1.7.7",
]
anthropic = [
    "anthropic~=0.18.0",
]
all = [
    "local-agent-cli[dev,anthropic]",
]

[project.entry-points."mustafacli.plugins"]
# Third-party plugins register here via pip install
sat-maestro = "src.plugins.sat_maestro.plugin:SatMaestroPlugin"

[project.scripts]
local-agent = "src.cli:main"
lagent = "src.cli:main"

[project.urls]
Homepage = "https://github.com/kardelenyazilim/local-agent-cli"
Documentation = "https://github.com/kardelenyazilim/local-agent-cli#readme"
Repository = "https://github.com/kardelenyazilim/local-agent-cli"
Issues = "https://github.com/kardelenyazilim/local-agent-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "structlog.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
